Add link to Netskjema for restricted datasets